		- now #define's innocent_pear_HOST_SIDE

		share/innocent-pear/nomnom.cc :
		- now #define's innocent_pear_HOST_SIDE
		- now includes derp.h via bbq.h, as it should

		share/innocent-pear/calm.cc :
		- now handles clang-style compiler passes
		- updated keyboard(...) and keyboardest(...) calls
		- now #define's innocent_pear_HOST_SIDE

		share/innocent-pear/calm.spec :
		- removed

		include/innocent-pear/bbq.h ,
		include/innocent-pear/kthxbai.h :
		- tweaked calculations of multiplicative inverses

		include/innocent-pear/lolwut.h :
		- fixed or disabled __asm constructs which do not work well
		  under clang++

		include/innocent-pear/host/lolcat.h :
		- updated per share/innocent-pear/keyboard.cc
		- now includes derp.h via bbq.h, as it should

		include/innocent-pear/rofl.h :
		- now defines rofl<...>::ptrace_raw(...) under Linux even
		  if rofl<...>::ptrace_lib(...) is undefined...

		include/innocent-pear/omg.h :
		- tweaked output of signal-unsafe and terminal-unsafe code

		test/infra/travis-install-deps.sh :
		- now installs clang if specified as target-side compiler

		lolwutconf/ :
		- bumped to 94151c6e6f

		.gitignore :
		- added *.tmp

2016-07-20	Somewhat minor fixes.

		include/innocent-pear/omg.h :
		- no longer defines omg<...>::Which2 and omg<...>::Which3
		  when unneeded

		include/innocent-pear/rofl.h :
		- fixed silly syntax errors which rear their heads when
		  TCXONC is absent

		lolwutconf/ :
		- bumped to cc40606132

2016-07-19	"There is nothing new under the sun, but there are lots of
		 old things we don't know yet."

		configure :
		- now also looks for mt19937_64 in standard C++ headers
		- now checks that at least one of {std::mt19937_64, boost::
		  mt19937_64}, one of {std::uint64_t, ::uint64_t}, and one
		  of {std::uintptr_t, ::uintptr_t} are defined

		GNUmakefile :
		- now makes $(config.h.host) rope in mt19937_64 definition

		share/innocent-pear/omnomnom.lxx :
		- now looks for mt19937_64 definition as detected by