@@ -200,7 +200,7 @@ struct kthxbai_impl
 				    Levels - 1>(x1, v1);
 				kthxbai_impl<NewState, unsigned, Flags,
 				    Levels - 1>(x2, v2);
-				__asm("arplw %w2, %w0" : "=r,m" (x1)
+				__asm("arpl %w2, %w0" : "=r,m" (x1)
 				    : "0,0" (x1), "r,r" (x2) : "cc");
 				x = (T)x1;
 				break;
